--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
