--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3"
   }
