--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.12.1",
     "web-vitals": "^2.1.4"
