--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "ignacio-nicoletti",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
