--- a/Client/.env.production
+++ b/Client/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_URL_API_LOCAL="http://localhost:3001"
-REACT_APP_URL_API="http://localhost:3001"
+REACT_APP_URL_API="https://games-board-server.vercel.app/"
 
