--- a/Client/.env.production
+++ b/Client/.env.production
@@ -1,5 +1,3 @@
 REACT_APP_URL_API_LOCAL="http://localhost:3001"
-REACT_APP_URL_API="https://games-board-server.vercel.app/"
-REACT_APP_NODE_ENV="develoment" #develoment | production
-
-
+REACT_APP_URL_API="https://cardgames.adaptable.app/"
+REACT_APP_NODE_ENV="development" #develoment | production
