--- a/Client/.env.production
+++ b/Client/.env.production
@@ -1,3 +1,4 @@
-REACT_APP_URL_API_LOCAL="http://localhost:3001/"
-REACT_APP_URL_API="https://cardgames.adaptable.app/"
-REACT_APP_NODE_ENV="development" #develoment | production
+REACT_APP_URL_API_LOCAL=http://localhost:3001/
+REACT_APP_URL_API=https://cardgames.adaptable.app/
+REACT_APP_NODE_ENV=development
+#development | production
